import "Physics.proto";

import "Atlas/EventStreamInfo.proto";

import "Jet.proto";

message Event
{
    optional int32 CLASS_ID = 1001;
    optional int32 run_number = 1;
    optional int32 event_number = 2;
    optional int32 lumi_block = 3;
    optional int32 bunch_crossing_id = 12;

    repeated Stream stream_tag = 13;

    optional double mc_event_weight = 4 [default = 1.0];

    repeated Vertex vertices = 6;

    repeated Jet jets = 8;


}
